remove unnecessary data

--- a/task3.ipynb
+++ b/task3.ipynb
@@ -63,7 +63,7 @@
     "# The delta is defined as 3 km approximately. 0.03 degrees. \n",
     "status = ubodt_gen.generate_ubodt(\"data/ubodt.txt\", 0.03, binary=False, use_omp=True)\n",
     "# Binary is faster for both IO and precomputation\n",
-    "# status = ubodt_gen.generate_ubodt(\"stockholm/ubodt.bin\", 0.03, binary=True, use_omp=True)\n",
+    "# status = ubodt_gen.generate_ubodt(\"data/ubodt.txt\", 0.03, binary=True, use_omp=True)\n",
     "print status"
    ]
   },
