--- a/task3.ipynb
+++ b/task3.ipynb
@@ -52,7 +52,7 @@
      "output_type": "stream",
      "text": [
       "Status: success\n",
-      "Time takes 45.046 seconds\n",
+      "Time takes 47.825 seconds\n",
       "\n"
      ]
     }
@@ -171,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Opath  [1095, 1095, 2732, 2732, 1093, 1093, 698, 698, 696, 8687, 17386, 3607, 3607, 2723, 2723, 1337, 1339, 41290, 1435, 1434, 1434, 1434, 1434]\n",
+      "Opath  [1095, 1095, 2732, 2732, 1093, 1093, 698, 698, 696, 8687, 17386, 3607, 3607, 2723, 2723, 1337, 1339, 41290, 1435, 1434, 1434, 1434, 1434]\n",
       "Cpath  [1095, 2732, 1093, 698, 8704, 62550, 8703, 696, 8687, 17386, 3607, 5509, 2723, 1337, 1339, 55275, 41288, 41290, 61207, 58489, 1435, 1434]\n",
       "WKT  LINESTRING(-8.6186233 41.141456,-8.6183463 41.14133,-8.6182629 41.141292,-8.6174342 41.140917,-8.6182629 41.141292,-8.6183463 41.14133,-8.6187144 41.141497,-8.6188491 41.141582,-8.6198235 41.142218,-8.6200853 41.142389,-8.6202318 41.14249,-8.6203556 41.142575,-8.6209478 41.143157,-8.6212837 41.143398,-8.6213339 41.143434,-8.6216294 41.143598,-8.6216904 41.143624,-8.6220438 41.143771,-8.6225335 41.143949,-8.6231598 41.144138,-8.6235745 41.144265,-8.6243174 41.144494,-8.6247666 41.144632,-8.6250934 41.144735,-8.6254106 41.144793,-8.6266799 41.14476,-8.6267551 41.144759,-8.6268987 41.144728,-8.627037 41.144713,-8.6271975 41.1447,-8.6273413 41.144688,-8.6274999 41.144678,-8.6276791 41.14467,-8.6278804 41.144665,-8.6280428 41.144668,-8.6282135 41.144678,-8.6284404 41.144699,-8.6286688 41.144731,-8.628864 41.144764,-8.6290926 41.144817,-8.6292898 41.144868,-8.6294324 41.144912,-8.6295694 41.144961,-8.6297382 41.145024,-8.6299469 41.14512,-8.6301362 41.145216,-8.6303271 41.145324,-8.6307201 41.145592,-8.6307923 41.145641,-8.6314509 41.146137,-8.6315556 41.146204,-8.6316434 41.14626,-8.6318066 41.146363,-8.6326775 41.146843,-8.6328764 41.146954,-8.6327796 41.147062,-8.6327668 41.147077,-8.6327023 41.147151,-8.6326805 41.147177,-8.631553 41.148453,-8.6314991 41.148514,-8.6310069 41.149082,-8.6308723 41.149237,-8.6302954 41.149903,-8.6299508 41.150301,-8.6295157 41.150808,-8.6294233 41.150916,-8.6293113 41.151044,-8.6291323 41.151246,-8.6290736 41.151312,-8.6289862 41.151477,-8.6289736 41.15158,-8.6287691 41.152377,-8.628743 41.152478,-8.6289655 41.152491,-8.6301016 41.152554,-8.6304904 41.152576,-8.6306176 41.152584,-8.6308068 41.152592,-8.6309917 41.152601,-8.6313575 41.152617,-8.6314821 41.15268,-8.6321685 41.15273,-8.6322295 41.152796,-8.6322941 41.152875,-8.6322538 41.15327,-8.6321804 41.153466,-8.6322 41.153604,-8.6321425 41.153694,-8.6320578 41.153797,-8.6319654 41.153888,-8.6318622 41.153974,-8.6318156 41.154007,-8.6317376 41.154068,-8.6313664 41.15433,-8.6310274 41.154568,-8.6308755 41.154531,-8.6307169 41.154492,-8.6307169 41.154492)\n"
      ]
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
      "output_type": "stream",
      "text": [
       "Result file : data/mr.csv\n",
-      "Output fields: opath cpath mgeom duration \n"
+      "Output fields: opath pgeom cpath mgeom \n"
      ]
     }
    ],
@@ -304,14 +304,17 @@
     "result_config = ResultConfig()\n",
     "result_config.file = \"data/mr.csv\"\n",
     "result_config.output_config.write_opath = True\n",
-    "result_config.output_config.write_duration = True\n",
-    "result_config.output_config.write_spdlist = True\n",
-    "print result_config.to_string()"
+    "# result_config.output_config.write_duration = True\n",
+    "# result_config.output_config.write_spdlist = True\n",
+    "result_config.output_config.write_mgeom = True\n",
+    "result_config.output_config.write_pgeom = True\n",
+    "\n",
+    "print result_config.to_string()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -319,11 +322,11 @@
      "output_type": "stream",
      "text": [
       "Status: success\n",
-      "Time takes 1.525 seconds\n",
+      "Time takes 1.516 seconds\n",
       "Total points 47337 matched 44086\n",
       "Total trajectories 999 matched 948\n",
       "Map match percentage 0.931322\n",
-      "Map match speed 28908.9 points/s \n",
+      "Map match speed 29080.5 points/s \n",
       "\n"
      ]
     }
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -343,9 +346,9 @@
      "output_type": "stream",
      "text": [
       "Status: success\n",
-      "Time takes 5.082 seconds\n",
+      "Time takes 5.144 seconds\n",
       "Total points 47337 matched 46192\n",
-      "Map match speed 9089.33 points/s \n",
+      "Map match speed 8979.78 points/s \n",
       "\n"
      ]
     }
